Architecture/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "0.0.0.1",
    "parameters": {
        "cidr-vnet": {
            "type": "string",
            "defaultValue": "192.168.0.0/16"
        },
        "cidr-subnet": {
            "type": "array",
            "defaultValue": [
                "192.168.0.0/24",
                "192.168.1.0/24",
                "192.168.2.0"
            ]
        },
        "subnet-names": {
            "type": "array",
            "defaultValue": [
                "web",
                "app",
                "db"
            ]
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "name": "Web-nsg",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSH",
                        "properties": {
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "22",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "AllowHTTPS",
                        "properties": {
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*"
                        }
                    }
                ]
            },
            "dependsOn": ["[resourceId('Microsoft.Network/virtualNetworks', 'myvnet02')]"]
        },
        {
            "name": "App-NSG",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('cidr-vnet')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[parameters('cidr-vnet')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": ["[resourceId('Microsoft.Network/virtualNetworks', 'myvnet02')]"]
        },
        {
            "name": "myvnet02",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "myvnet02"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('cidr-vnet')]"
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            //concat function (subnet 0 =[concat('subnet', 0)])
            //"name": "myvnet002/web",
            "name": "[concat('myvnet002','/',parameters('subnet-names')[copyIndex()])]",
            "properties": {
                "addressPrefix": "[parameters('cidr-subnet')[0]]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'myvnet02')]"
                ],
                "copy": {
                    "name": "subnetcopy",
                    //"count": 3, //copy as many cidr's we have
                    //we can use array functions -Length
                    "count": "[length(parameters('cidr-subnet'))]",
                    "mode": "Serial"
                }
        }
    ]
}
